[project]
name = "gh-feed"
version = "0.1.0"
description = "A CLI tool to fetch and display GitHub user activity."
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [
    {name = "Hamza Danjaji", email = "bhantsi@gmail.com"}
]
dependencies = []

[project.scripts]
gh-feed = "gh_feed.app:main"
